Revision history for Perl module CBOR::Free

0.19
- BUG FIX: Properly validate UTF-8 map keys when decoding.

0.18 19 Jan 2020
- BREAKING CHANGE: Encode UTF8-flagged hash keys as CBOR text.
- BUG FIX: Properly decoded hash keys that contain code points 128-255 were
  previously mangled. This release fixes that.
- BUG FIX: Decode CBOR text strings as UTF8-flaged Perl strings.
  This is an admittedly-imperfect attempt to preserve distinctly-typed text
  strings in Perl (a language that, by design, doesn’t distinguish text vs.
  binary). The POD has described this behavior for some time; it just was never
  implemented correctly until now.
- Add (EXPERIMENTAL) “text_keys” encode mode, which causes all CBOR map keys
  to be text. This requires proper character decoding!
- Add native_utf8() decode mode, which skips UTF-8 validation in decoding.
- Build fix: Require a reasonably recent ExtUtils::MakeMaker.

0.17 17 Jan 2020
- Make documentation more accurate regarding Perl strings.

0.16 19 Nov 2019
- Make tests accommodate floating-point bug in pre-5.24 Windows perls.

0.15 18 Nov 2019
- BUG FIX: Several memory leaks on error conditions are fixed.
- Add optional preserve/shared references support.
- Speed up “canonical” ordering.

0.14 9 Nov 2019
- BREAKING CHANGE: The encoder now requires a flag to encode scalar references.
  (The decoder still handles them all the time.)
- Accommodate quadmath builds in tests, and mention them in documentation
  regarding rounding.

0.13 8 Nov 2019
- Add (automatic) support for the “indirection” tag.

0.12 30 Jun 2019
- BREAKING CHANGE (minor): Unrecognized tagged values now prompt a warning.
  This means that decode() will warn() on every tagged value.
- Fix bug in parsing arguments to encode().
- Create CBOR::Free::Decoder class, which allows configurable parsing
  of tagged values.
- Refactor C code to be more modular and maintainable.

0.11 20 Jun 2019
- BREAKING CHANGE: $CBOR::Free::true and $CBOR::Free::false no longer exist.