@@ -11,7 +11,7 @@ our ($VERSION);
 use XSLoader ();
 
 BEGIN {
-    $VERSION = '0.18';
+    $VERSION = '0.19_01';
     XSLoader::load();
 }
 
