@@ -2,6 +2,7 @@ Revision history for Perl module CBOR::Free
 
 0.19
 - BUG FIX: Properly validate UTF-8 map keys when decoding.
+- InvalidUTF8 errors now correctly handle NULs.
 
 0.18 19 Jan 2020
 - BREAKING CHANGE: Encode UTF8-flagged hash keys as CBOR text.
